--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -77,7 +77,6 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dip"
             android:layout_marginRight="30dip"
-            android:background="@drawable/basic_button"
             android:onClick="onClickLogin"
             android:text="@string/button_sign_in"
             android:textColor="@android:color/white" />
@@ -98,7 +97,7 @@
                 android:onClick="onClickFacebookSignUp"
                 android:paddingLeft="10dp"
                 android:text="@string/button_facebook_signup"
-                android:enabled="false"
+                android:enabled="true"
                 android:textColor="@android:color/white" />
 
             <Button
