--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -92,7 +92,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:background="@drawable/clickable_text"
+                android:background="@drawable/big_button"
                 android:gravity="left|center_vertical"
                 android:onClick="onClickFacebookSignUp"
                 android:paddingLeft="10dp"
@@ -105,7 +105,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:background="@drawable/clickable_text"
+                android:background="@drawable/big_button"
                 android:gravity="left|center_vertical"
                 android:onClick="onClickChangeAction"
                 android:paddingLeft="10dp"
